@startuml US04-CD
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class RegisterOrganizationUI {
}

class RegisterOrganizationController {
    + RegisterOrganizationController()
    + getOrganizationTypes() : List<OrganizationType>
    + getOrganizationNatures() : List<OrganizationNature>
    + registerOrganization(name : String, nature : OrganizationNature, type : OrganizationType) : boolean
}

class Repositories <<Singleton>> {
    - {static} instance : Repositories
    - Repositories()
    + {static} getInstance() : Repositories
    + getOrganizationRepository() : OrganizationRepository
}

class OrganizationRepository {
    + registerOrganization(name : String, nature : OrganizationNature,\n  type : OrganizationType) : boolean
    + existsByNameAndType(name : String, type : OrganizationType) : boolean
}

class Organization {
    - vatNumber : String
    - name : String
    - nature : OrganizationNature
    - type : OrganizationType
    + Organization(name : String, nature : OrganizationNature, type : OrganizationType)
    + getName() : String
    + getNature() : OrganizationNature
    + getType() : OrganizationType
    + getVatNumber() : String
}

enum OrganizationType {
    COMPANY
    POLITICAL_PARTY
    FOUNDATION
    INSTITUTE
    ASSOCIATION
}

enum OrganizationNature {
    PUBLIC
    PRIVATE
    SOCIAL
}

RegisterOrganizationUI .> RegisterOrganizationController

RegisterOrganizationController ..> Repositories
RegisterOrganizationController ..> OrganizationRepository

Repositories -> "1" Repositories : instance
Repositories --> "1" OrganizationRepository : organizationRepository

OrganizationRepository ..> Organization : «create»
OrganizationRepository "1" --> "*" Organization : organizations

Organization ..> OrganizationType
Organization ..> OrganizationNature

@enduml
